@@ -14,15 +14,30 @@ import com.google.gson.reflect.TypeToken;
 
 public class EnderServerManager {
 	private HashMap<String, EnderServer> servers = new HashMap<String, EnderServer>();
-
+	private ArrayList<String> permissions = new ArrayList<String>();
+	
+	public EnderServerManager(String globalPermissions) {
+		for(String s: globalPermissions.split(",")) {
+			permissions.add(s.toLowerCase().trim());
+		}
+	}
+	
 	public void clear() {
 		servers = new HashMap<String, EnderServer>();
 	}
 	
 	public boolean can(EnderServer server, String permission) {
+		if(permissions.size() > 0) { // global checks
+			if(permissions.contains("none")) return false;
+			if(!permissions.contains(permission)) return false;
+		}
 		if(server.permissions.size() == 0) return true; // no perms - all allowed
 		if(server.permissions.contains("none")) return false; // none as a permission - nothing allowed
 		return server.permissions.contains(permission);
+	}
+	
+	public boolean canLocal(String permission) {
+		return this.can(new EnderServer("local", "127.0.0.1"), permission);
 	}
 	
 	public EnderServer get(String name) {
